--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^17.3.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
+    "apexcharts": "^3.53.0",
     "bootstrap": "^5.3.3",
+    "ng-apexcharts": "^1.7.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
