--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ng-apexcharts": "^1.7.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
